<resources>
    <string name="app_name">IT家</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">发现</string>
    <string name="title_circle">圈子</string>
    <string name="title_notifications">我的</string>
    <string name="qq">QQ登录</string>
    <string name="weixin">微博登录</string>
    <string name="me_title">个人中心</string>
    <string name="setting">设置</string>
    <string name="me_like">我喜欢的</string>
    <string name="me_zan">我的点赞</string>
    <string name="me_collect">我的收藏</string>
    <string name="me_history">阅读历史</string>
    <string name="me_feedback">意见反馈</string>
    <string name="me_share">推荐给好友</string>
    <string name="me_game">进来玩玩</string>
    <string name="find_new_friend">新朋友</string>

    <!--登录注册-->
    <string name="login_welcome">欢迎登录</string>
    <string name="login_username_hint">请输入用户名/手机号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_reg_now">立即注册</string>
    <string name="register_welcome">手机号注册</string>
    <string name="register_name_hint">请输入手机号</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_pwd_hint">请输入密码</string>
    <string name="register_inviate_hint">请输入邀请码(选填)</string>
    <string name="register_reg">注册</string>
    <string name="register_login_now">立即登录</string>
    <string name="forget_welcome">找回密码</string>
    <string name="forget_pwd_repeat_hint">请再次输入密码</string>
    <string name="forget_ok">确定</string>
    <string name="splash_content">一款圈住程序猿的APP</string>

    <!--个人信息-->
    <string name="person_icon">头像:</string>
    <string name="person_name">昵称:</string>
    <string name="person_sex">性别:</string>
    <string name="person_email">邮箱:</string>
    <string name="person_blog">博客地址:</string>
    <string name="person_desc">个性签名:</string>
    <string name="person_star">关注</string>
    <string name="person_follow">粉丝</string>
    <string name="person">个人主页</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="logout">退出账号</string>
    <string name="logout_hint">已退出...</string>

    <string name="post_gank">分享干货</string>
    <string name="post_gank_submit">提交</string>
    <string name="post_gank_url">文章链接(自动识别粘贴板)</string>
    <string name="post_gank_who">文章提交者</string>
    <string name="post_gank_desc">请输入干货内容描述</string>
    <string name="post_gank_type">请选择干货类型</string>

    <string name="circle_search">圈子</string>
    <string name="circle_fire">热门推荐</string>
    <string name="cirle_add_friend">加好友</string>
    <string name="cirle_add_news_content_hint">晒技术、晒有趣、晒生活！</string>
    <string name="cirle_add_news_content_not_empty">请输入动态内容哦...</string>
    <string name="circle_add_news_title">新建动态</string>
    <string name="circle_add_news_select_tag_hint">请选择分类</string>
    <string name="circle_add_news_content_limit">最多可输入500字符</string>
    <string name="send_sms">发消息</string>
    <string name="circle_search_hint">请输入要搜索的联系人</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="agree">通过</string>
    <string name="agreed">已通过</string>

    <string name="toast_other_device">您的账号在其他设备上登录，请尽快修改您的密码</string>
    <string name="toast_push_add_request">您有新的好友申请</string>
    <string name="toast_message_when_agree_request">我们已经是好友了，来聊天吧</string>
    <string name="toast_contact_sendRequestSucceed">发送请求成功，等待对方验证</string>
    <string name="toast_add_news_suc">发布成功...</string>


    <string name="alter_logout_content">退出账号将收不到推送消息,您确定要退出当前账号吗?</string>
    <string name="alter_delete_friend_sms">是否删除该好友请求?</string>


    <string-array name="addNewsTags">
        <item>生活</item>
        <item>技术圈</item>
        <item>有趣</item>
        <item>搞基</item>
    </string-array>

</resources>
