<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:custom="http://schemas.android.com/tools"
                android:id="@+id/root"
                android:clipToPadding="true"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/tv_login_welcome"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/iv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_24"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:fillViewport="true"
        android:scrollbarThumbVertical="@android:color/transparent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:background="@drawable/bg_white_top_round"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="220dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_16">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_10"
                    android:src="@mipmap/icon_login_name"/>

                <EditText
                    android:id="@+id/et_login_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/login_username_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="14dp"/>

                <ImageView
                    android:id="@+id/iv_login_clean_phone"
                    android:layout_width="40dp"
                    android:layout_height="fill_parent"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_clear"
                    android:visibility="gone"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey"/>

            <LinearLayout
                android:background="@drawable/bg_white_bottom_round"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_16">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_10"
                    android:src="@mipmap/icon_login_pwd"/>

                <EditText
                    android:id="@+id/et_login_pwd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/login_pwd_hint"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="14dp"/>

                <ImageView
                    android:id="@+id/iv_login_clear_pwd"
                    android:layout_width="48dp"
                    android:layout_height="fill_parent"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_clear"
                    android:visibility="gone"/>
            </LinearLayout>


            <TextView
                android:gravity="center"
                android:id="@+id/tv_login_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/dp_48"
                android:background="@drawable/bg_border_white"
                android:text="@string/login_login"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:visibility="invisible"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:id="@+id/tv_login_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/login_forget"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14"/>

                <TextView
                    android:layout_marginRight="@dimen/dp_10"
                    android:id="@+id/tv_login_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="21dp"
                    android:text="@string/login_reg_now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>