<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:id="@+id/refresh"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                         xmlns:app="http://schemas.android.com/apk/res-auto"
                                                         xmlns:tools="http://schemas.android.com/tools"
                                                         android:layout_width="match_parent"
                                                         android:layout_height="match_parent"
                                                         tools:context="com.wswy.chechengwang.view.activity.SubscriptionDetailActivity">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">


                    <android.support.v7.widget.Toolbar
                        android:id="@+id/my_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_48"
                        app:layout_collapseMode="pin">


                    </android.support.v7.widget.Toolbar>

                </android.support.design.widget.CollapsingToolbarLayout>


            </android.support.design.widget.AppBarLayout>


            <android.support.v4.widget.NestedScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.hankkin.library.view.RippleView
                        android:background="@color/white"
                        rv_centered="true"
                        android:id="@+id/rip_like"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:drawableLeft="@mipmap/icon_me_like"
                            android:text="@string/me_like"
                            style="@style/me_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            style="@style/me_txt_right"
                            android:text="20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </com.hankkin.library.view.RippleView>
                    <include layout="@layout/layout_line"/>

                    <com.hankkin.library.view.RippleView
                        android:background="@color/white"
                        rv_centered="true"
                        android:id="@+id/rip_zan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:drawableLeft="@mipmap/icon_me_zan"
                            android:text="@string/me_zan"
                            style="@style/me_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            style="@style/me_txt_right"
                            android:text="20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </com.hankkin.library.view.RippleView>
                    <include layout="@layout/layout_line"/>

                    <com.hankkin.library.view.RippleView
                        android:background="@color/white"
                        rv_centered="true"
                        android:id="@+id/rip_collect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:drawableLeft="@mipmap/icon_me_star"
                            android:text="@string/me_collect"
                            style="@style/me_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            style="@style/me_txt_right"
                            android:text="20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </com.hankkin.library.view.RippleView>
                    <include layout="@layout/layout_line"/>
                    <com.hankkin.library.view.RippleView
                        android:background="@color/white"
                        rv_centered="true"
                        android:id="@+id/rip_history"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:drawableLeft="@mipmap/icon_me_eye"
                            android:text="@string/me_history"
                            style="@style/me_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            style="@style/me_txt_right"
                            android:text="20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </com.hankkin.library.view.RippleView>
                    <com.hankkin.library.view.RippleView
                        android:layout_marginTop="@dimen/dp_10"
                        android:background="@color/white"
                        rv_centered="true"
                        android:id="@+id/rip_feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:drawableLeft="@mipmap/icon_me_feedback"
                            android:text="@string/me_feedback"
                            style="@style/me_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </com.hankkin.library.view.RippleView>
                    <include layout="@layout/layout_line"/>

                    <com.hankkin.library.view.RippleView
                        android:background="@color/white"
                        rv_centered="true"
                        android:id="@+id/rip_share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:drawableLeft="@mipmap/icon_me_share"
                            android:text="@string/me_share"
                            style="@style/me_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </com.hankkin.library.view.RippleView>
                    <include layout="@layout/layout_line"/>

                </LinearLayout>


            </android.support.v4.widget.NestedScrollView>


        </android.support.design.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/subscription_head"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                android:id="@+id/iv_head"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/icon_user_default"/>

            <TextView
                android:id="@+id/tv_me_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/me_title"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_me_set"
                android:layout_width="75dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/white"/>
        </LinearLayout>

    </FrameLayout>

</android.support.v4.widget.SwipeRefreshLayout>